2010-06-25  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r61924.
        http://trac.webkit.org/changeset/61924
        https://bugs.webkit.org/show_bug.cgi?id=41240

        It was rolled out, but cq+ wasn't removed (Requested by Ossy_
        on #webkit).

        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        (JSC::RegExp::create):
        * runtime/RegExp.h:
        * runtime/RegExpCache.cpp:
        (JSC::RegExpCache::lookupOrCreate):
        (JSC::RegExpCache::create):
        * runtime/RegExpCache.h:

2010-06-25  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        Merge RegExp constructor and RegExp::create methods into one.
        Both of function are called with tree parameters and check whether 
        flags (the third param) is given or not.
        Simplify hash lookups in RegExpCache::create with giving them an extra 
        iterator parameter.
        https://bugs.webkit.org/show_bug.cgi?id=41055

        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        * runtime/RegExp.h:
        * runtime/RegExpCache.cpp:
        (JSC::RegExpCache::lookupOrCreate):
        (JSC::RegExpCache::create):
        * runtime/RegExpCache.h:

2010-06-25  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Simon Hausmann.

        Introduce QtScript benchmarks.

        The QtScript performance should be tested regularly. The patch introduces
        micro benchmarks for existing API.

        [Qt] Performance of the QtScript API is not tested.
        https://bugs.webkit.org/show_bug.cgi?id=40911

        * qt/benchmarks/benchmarks.pri: Copied from JavaScriptCore/qt/tests/tests.pri.
        * qt/benchmarks/benchmarks.pro: Added.
        * qt/benchmarks/qscriptengine/qscriptengine.pro: Added.
        * qt/benchmarks/qscriptengine/tst_qscriptengine.cpp: Added.
        (tst_QScriptEngine::checkSyntax_data):
        (tst_QScriptEngine::checkSyntax):